; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_si_asic_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_si.c_si_asic_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @si_asic_reset(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca i64, align 8
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  %4 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %5 = call i64 @si_gpu_check_soft_reset(%struct.radeon_device* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %10 = call i32 @r600_set_bios_scratch_engine_hung(%struct.radeon_device* %9, i32 1)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @si_gpu_soft_reset(%struct.radeon_device* %12, i64 %13)
  %15 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %16 = call i64 @si_gpu_check_soft_reset(%struct.radeon_device* %15)
  store i64 %16, i64* %3, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %11
  %20 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %21 = call i32 @r600_set_bios_scratch_engine_hung(%struct.radeon_device* %20, i32 0)
  br label %22

22:                                               ; preds = %19, %11
  ret i32 0
}

declare dso_local i64 @si_gpu_check_soft_reset(%struct.radeon_device*) #1

declare dso_local i32 @r600_set_bios_scratch_engine_hung(%struct.radeon_device*, i32) #1

declare dso_local i32 @si_gpu_soft_reset(%struct.radeon_device*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
